<resources>
    <string name="app_name">GoPPlus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="apiEndpoint">https://goppluscc.azurewebsites.net/</string>
    <string name="apiDriver">https://gopplusdd.azurewebsites.net/</string>
    <string name="apiPayment">https://goppluspp.azurewebsites.net/</string>
    <string name="apiAdmin">https://gopplus.website/</string>
    <string name="default_terms">https://www.primeraplus.com.mx</string>

    <string name="secret">g0sp3qtrUm_</string>
    <string name="ciudad">Leon,Guanajuato</string>
    <string name="ciudad_geocode">León, Gto.</string>

    <string name="db_user">user</string>
    <string name="db_vehicles">vehiclesByType</string>
    <string name="db_settings">settings</string>
    <string name="db_token">token</string>
    <string name="db_appid">appid</string>
    <string name="db_userid">userid</string>
    <string name="db_imageprofile">imageprofile</string>

    <string name="share_code">¡Usa mi código %s y recibe un descuento en tu primer viaje con GoPPlus!</string>
    <string name="default_error">Algo ha pasado, intenta nuevamente</string>
    <string name="default_username">Buscando nombre</string>
    <string name="defaultProgress">Espere un momento</string>
    <string name="close_session">Cerrar Sesión</string>
    <string name="activation_text">Ingresa el código de activación que se te envío por correo electrónico</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">2328732394056096</string>
    <string name="fb_login_protocol_scheme">fb2328732394056096</string>
    <string name="apiKey">AIzaSyBHLzjH7LEnHdjUlTaRrDBpLjOIsyqTTIs</string>
    <string name="default_notification_channel_id">default</string>
    <string name="version_name">GoPPlus 1.0.106</string>
    <string name="placeholdercodigo">Código</string>
    <string name="activar_mi_cuenta">ACTIVAR MI USUARIO</string>
    <string name="reenviar_cOdigo">REENVIAR CÓDIGO</string>
    <string name="mensaje">Mensaje</string>
    <string name="enviar">ENVIAR</string>
    <string name="agrega_una_nueva_tarjeta">Agrega una nueva tarjeta</string>
    <string name="n_mero_de_tarjeta">Número de Tarjeta</string>
    <string name="mes">Mes</string>
    <string name="a_o">Año</string>
    <string name="c_digo_de_seguridad">Código de seguridad</string>
    <string name="agregar_tarjeta">AGREGAR TARJETA</string>
    <string name="a_d_nde_te_llevamos">¿A dónde te llevamos?</string>
    <string name="ninguna">Ninguna</string>
    <string name="m_todo_de_pago">MÉTODO DE PAGO</string>
    <string name="ninguno">Ninguno</string>
    <string name="solicitar">SOLICITAR</string>
    <string name="c_digo_de_descuento">CÓDIGO DE DESCUENTO</string>
    <string name="estimar_costo">ESTIMAR COSTO</string>
    <string name="destino">Destino:</string>
    <string name="origen">Origen:</string>
    <string name="todo">TODO</string>
    <string name="viajes_gratis">Viajes gratis</string>
    <string name="comparte_tu_c_digo_por_facebook_correo_electr_nico_y_o_sms_para_recibir_descuentos_en_tus_viajes">Comparte tu código por Facebook, correo electrónico y/o SMS para recibir descuentos en tus viajes</string>
    <string name="code">CODE</string>
    <string name="compartir">Compartir</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="enviar_c_digo_de_autorizaci_n">Enviar código de autorización</string>
    <string name="staticmapsuri"><![CDATA[https://maps.googleapis.com/maps/api/staticmap?size=500x200&key=]]></string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="olvid_mi_contrase_a">Olvidé mi contraseña</string>
    <string name="no_tienes_cuenta_reg_strate">¿No tienes cuenta? Regístrate</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="confirmar_nueva_contrase_a">Confirmar nueva contraseña</string>
    <string name="da_click_en_la_imagen_para_cambiar">Da click en la imagen para cambiar</string>
    <string name="fecha_de_cumplea_os">Fecha de nacimiento</string>
    <string name="nombre">Nombre</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="tel_fono">Teléfono</string>
    <string name="actualizar_datos">ACTUALIZAR DATOS</string>
    <string name="ingresa_un_c_digo_de_descuento_v_lido">Ingresa un código de descuento válido</string>
    <string name="c_digo_de_descuentos">Código de descuento</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="observaciones">Observaciones</string>
    <string name="quejas_movilidad_guanajuato_gob_mx">quejas_movilidad@guanajuato.gob.mx</string>
    <string name="listo">Listo</string>
    <string name="leer_t_rminos_y_condiciones">Leer Términos y Condiciones</string>
    <string name="o">Ó</string>
    <string name="facebook">Facebook</string>
    <string name="m_nimo_8_caracteres_m_ximo_16_nla_contrase_a_debe_contener_m_nimo_una_letra_may_scula_una_min_scula_un_car_cter_especial_y_n_meros_nno_debe_contener_acentos_ni_los_siguientes_caracteres_u003c_u003e"><![CDATA[Mínimo 8 caracteres, máximo 16. La contraseña debe contener min.: una letra mayúscula, una minúscula, un caracter especial y un número. No debe contener acentos, ni los siguientes caracteres: <>]]></string>
    <string name="acepto_los_t_rminos_y_condiciones">ACEPTO LOS TÉRMINOS Y CONDICIONES</string>
    <string name="acepto">ACEPTO LOS TÉRMINOS Y CONDICIONES</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="espere_un_momento">Espere un momento</string>
    <string name="buscando_ubicaci_n">Buscando ubicación</string>
    <string name="todo2">TODO</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="base_0">Base: $0</string>
    <string name="uno">...</string>
    <string name="minuto_0">Minuto: $0</string>
    <string name="km_0">Km: $0</string>
    <string name="dos">**** **** ****</string>
    <string name="k">k</string>
    <string name="l">l</string>
    <string name="lol">o</string>
    <string name="y">b</string>
    <string name="pp">b</string>
    <string name="estatus">ESTATUS</string>
    <string name="_5">5</string>
    <string name="make_model">MAKE /MODEL</string>
    <string name="driver_name">DRIVER NAME</string>
    <string name="lic_color_plate">LIC / PLATE</string>
    <string name="km">KM</string>
    <string name="mmml">mmm</string>
    <string name="bnbn9">bnbn</string>
    <string name="servicios">Servicios</string>
    <string name="historial">Historial</string>sol
    <string name="perfil">Perfil</string>
    <string name="viajes_gratis2">Viajes Gratis</string>
    <string name="t_rminos_y_condiciones">Términos y condiciones</string>
    <string name="version">1.0.106</string>
    <string name="actualizar_contrase_a">Actualizar Contraseña</string>
    <string name="refresh">Refresh</string>
    <string name="EfectivoTarjeta">Efectivo/Tarjeta</string>
    <string name="Tarjeta">Tarjeta</string>
    <string name="Metododepago">Método de Pago</string>
    <string name="efectivo">Efectivo</string>
    <string name="seleccionaunmetodo">Selecciona un Método de Pago:</string>
    <string name="Ninguno">Ninguno</string>
    <string name="confirmacioncontra">Confirmación de Correo Electrónico</string>
</resources>
