<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="4dp">

    <ImageView
        android:id="@+id/vehicleImage"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:contentDescription="@string/vehicle_type"
        android:src="@mipmap/vehiclered" />

    <ImageView
        android:id="@+id/inactiveVehicleImage"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:contentDescription="@string/vehicle_type"
        android:src="@mipmap/vehicle" />

    <TextView
        android:id="@+id/vehicleType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uno"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/vehicle_box"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="4dp"
        android:textAlignment="center">

        <TextView
            android:id="@+id/startPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base_0"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/timePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minuto_0"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/kmPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/km_0"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>


