<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pplus.go.app.gopplus.Signup"
    android:background="@mipmap/bgcroquisgris">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height"
            android:background="@mipmap/bgnavbar"
            app:popupTheme="@style/AppTheme.PopupOverlay">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="74dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@mipmap/logo" />


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingBottom="32dp">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/fbLoginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/facebookButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="16dp"
                android:background="@mipmap/redbutton"
                android:onClick="doFacebookLogin"
                android:text="@string/facebook"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/o"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/facebookButton" />

            <EditText
                android:id="@+id/birthField"
                style="@style/EditText_White"
                android:layout_width="match_parent"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/fecha_de_cumplea_os"
                android:inputType="textPersonName"
                android:onClick="doOpenCalendar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:autofillHints="" />

            <EditText
                android:id="@+id/nameField"
                style="@style/EditText_White"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birthField"
                android:autofillHints="" />

            <EditText
                android:id="@+id/phoneField"
                style="@style/EditText_White"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="32dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/tel_fono"
                android:inputType="number|phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameField" />

            <EditText
                android:id="@+id/emailField"
                style="@style/EditText_White"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="32dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/correo_electr_nico"
                android:inputType="textWebEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneField" />

            <EditText
                android:id="@+id/passwordField"
                style="@style/EditText_White"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailField"
                android:autofillHints="" />

            <TextView
                android:id="@+id/passwordText"
                style="@style/EditText_White"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:text="@string/m_nimo_8_caracteres_m_ximo_16_nla_contrase_a_debe_contener_m_nimo_una_letra_may_scula_una_min_scula_un_car_cter_especial_y_n_meros_nno_debe_contener_acentos_ni_los_siguientes_caracteres_u003c_u003e"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordField" />

            <TextView
                android:id="@+id/acceptText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/acepto_los_t_rminos_y_condiciones"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordText" />

            <Button
                android:id="@+id/acceptButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:background="@color/gray"
                android:onClick="doAccept"
                android:text="@string/acepto"
                app:layout_constraintEnd_toStartOf="@+id/acceptText"
                app:layout_constraintTop_toBottomOf="@+id/passwordText" />

            <TextView
                android:id="@+id/readTermsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="doOpenTermsAndConditions"
                android:text="@string/leer_t_rminos_y_condiciones"
                app:layout_constraintEnd_toEndOf="@+id/acceptText"
                app:layout_constraintStart_toStartOf="@+id/acceptText"
                app:layout_constraintTop_toBottomOf="@+id/acceptText" />

            <Button
                android:id="@+id/signupButton"
                style="@style/Button_Black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/listo"
                app:layout_constraintEnd_toEndOf="@+id/facebookButton"
                app:layout_constraintStart_toStartOf="@+id/facebookButton"
                app:layout_constraintTop_toBottomOf="@+id/readTermsText"
                android:onClick="doSignup"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>