<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.pplus.go.app.gopplus.Profile">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height"
            android:background="@mipmap/bgnavbar"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="74dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@mipmap/logo" />


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:background="@mipmap/bgcroquisgris">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/defaultprofile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:onClick="doTakePicture"
            android:contentDescription="@string/todo" />


        <TextView
            android:id="@+id/updateImageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/da_click_en_la_imagen_para_cambiar"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/profileImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/birthField"
            style="@style/EditText_White"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:autofillHints=""
            android:clickable="true"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/fecha_de_cumplea_os"
            android:inputType="text"
            android:onClick="doOpenCalendar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/updateImageText" />

        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/birthField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            style="@style/EditText_White"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/nameField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            style="@style/EditText_White"
            android:hint="@string/correo_electronico"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/phoneField"
            style="@style/EditText_White"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:autofillHints=""
            android:hint="@string/tel_fono"
            android:inputType="text|phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailField" />


        <Button
            android:id="@+id/updateButton"
            style="@style/Button_Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/actualizar_datos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneField"
            android:onClick="doUpdate"/>

        <Button
            android:id="@+id/updatePasswordButton"
            style="@style/Button_Black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/actualizar_contrase_a"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/updateButton"
            android:onClick="doOpenUpdatePassword"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>